让我们重构一下命令系统~分离runcommand函数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,8 @@ set(SOURCES
     src/GameObject.cpp
     src/GameEngine/LoadSave.cpp
     src/GameEngine/Rendering.cpp
-    src/GameEngine/Logic.cpp  # 新增
+    src/GameEngine/Logic.cpp
+    src/GameEngine/Commands.cpp
     src/main.cpp
 )
 
