重构命令系统-拆分commands.cpp，但是暂未删除

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,37 @@
-# File: CMakeLists.txt
-cmake_minimum_required(VERSION 3.10)
-project(GameEngine)
+cmake_minimum_required(VERSION 3.15)
+project(GameEngine LANGUAGES CXX)
 
+# 设置C++标准
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find required packages
-find_package(Curses REQUIRED)
+# 包含目录配置
+include_directories(
+    include
+    include/Commands
+    include/Commands/ConcreteCommands
+)
 
-# Include directories
-include_directories(${CMAKE_SOURCE_DIR}/include)
+# 源文件配置
+file(GLOB_RECURSE SOURCE_FILES
+    "src/*.cpp"
+    "src/Commands/*.cpp"
+    "src/Commands/ConcreteCommands/*.cpp"
+    "src/GameEngine/*.cpp"
+)
 
-# Source files
-set(SOURCES
-    src/GameMap.cpp
-    src/GameObject.cpp
-    src/GameEngine/LoadSave.cpp
-    src/GameEngine/Rendering.cpp
-    src/GameEngine/Logic.cpp
-    src/GameEngine/Commands.cpp
+# 可执行文件配置
+add_executable(GameEngine 
+    ${SOURCE_FILES}
     src/main.cpp
 )
 
-# Executable
-add_executable(GameEngine ${SOURCES})
+# 编译器选项
+if(MSVC)
+    target_compile_options(GameEngine PRIVATE /W4 /WX)
+else()
+    target_compile_options(GameEngine PRIVATE -Wall -Wextra -Werror -pedantic)
+endif()
 
-# Link libraries
-target_link_libraries(GameEngine ${CURSES_LIBRARIES})
-
-# Installation (optional)
-install(TARGETS GameEngine DESTINATION bin)
+# 输出目录配置
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
