--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+# CMakeLists.txt
 cmake_minimum_required(VERSION 3.15)
 project(GameEngine LANGUAGES CXX)
 
@@ -23,8 +24,13 @@ file(GLOB_RECURSE SOURCE_FILES
 # 可执行文件配置
 add_executable(GameEngine 
     ${SOURCE_FILES}
-    src/main.cpp
 )
+
+# 查找并链接ncurses库
+find_package(Curses REQUIRED)
+target_link_libraries(GameEngine PRIVATE ${CURSES_LIBRARIES})
+target_include_directories(GameEngine PRIVATE ${CURSES_INCLUDE_DIRS})
+target_compile_definitions(GameEngine PRIVATE ${CURSES_CFLAGS})
 
 # 编译器选项
 if(MSVC)
